# ImmuneCell-GEMs

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
docs/: MODEL_METADATA.md  VALIDATION.md
metadata/: models.csv
metadata/media/: base.json  butyrate_uptake.json  glucose_low.json  hypoxia.json
metadata/phenotypes/: Eosinophil.yaml  README.md
models/B cell naive/: README.md
models/CD4_Teff models/: README.md
models/CD4_Treg/: README.md
models/CD8_Memory/: README.md
models/CD8_Naive/: README.md
models/DendriticCell/: README.md
models/Eosinophil/: README.md
models/Macrophage_M0/: README.md
models/Macrophage_M1/: README.md
models/Macrophage_M2/: README.md
notebooks/: 01_metabolic_atlas_placeholder.ipynb
scripts/: run_validation_panel.py  summarize_results.py
src/immune_gems/: __init__.py  io.py  media.py  simulate.py  validation.py
tests/: test_media.py
